XSCOLIBRI-24: Login screen messed up on IE7 Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23144 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -978,6 +978,9 @@ body.content #contentcolumn .main {
     padding: 0;
     position: relative;
 }
+html>body #xwikicontent {
+    border: 1px solid transparent;
+}
 
 html > body .minwidth, html > body .minwidthb, html > body .minwidthc {
     display: none;
@@ -1000,7 +1003,7 @@ html > body .minwidth, html > body .minwidthb, html > body .minwidthc {
 }
 
 #contentcontainer {
-    height: 1%;
+  clear: both;
 }
 
 #rightPanels {
